style.css
header {
  text-align: center;
  font: Georgia;
  color: white;
  background-color: #01295F;
  background-size: cover;
}
#grow {
  border-radius: 20px;
}
h1 {
  font-size: 60px;
}
body {
  background-color: #325F71;
}
li  {
  text-align: center;
  color: white;
  display: inline;
  padding: 15px 25px;
}
#insta  {
  width: 5%;
  height: 5%;
}
#linkedin  {
  width: 4%;
  height: 4%;
}
#youtube  {
  width: 5.5%;
  height: 5.5%;
}
article {
  text-align: center;
  max-width: 500px;
  margin: auto;
  border-radius: 12px;
  padding: 10px;
  color: white;
  background-color: rgba(0,0,0,0.5)
}
button {
  height: 30px;
  width: 100px;
  margin: 0 auto;
}
form{
  margin: 10px 0px;
  display: inline;
}
#firstUL {
  margin-bottom: 0;
}
#secondUL {
  margin-top: 0;
  background-color: rgba(0,0,0,0.3);
}
.link {
  color: white;
}
a:hover {
  color: white;
}
#subbutton {
  background-color: #1A936F;
  display: inline;
  color: black;
}
.cornell {
  width: 4.5%;
  height: 4.5%;
}
.TKH {
  height: 5%;
  width: 5%;
}
.Apple {
  height: 5%;
  width: 5%;
}
#Calculator {
  height: 22%;
  width: 22%;
  max-width: 70%;
}
#ReportCard {
  height: 33%;
  width: 7%;
}
#GreaterThan {
  height: 8%;
  width: 10%;
  margin: 0;
  max-height: 8%;
}
table {
  margin: auto;
}
td {
  text-align: center;
}
th {
  color: white;
  text-align: center;
}
#annoyance {
  width: 40%;
  height: 20%;
  padding-top: 0px;
  margin-top: 10px;
  max-height: 20%;
}
.quizForm {
  display: block;
}
#grow {
  height: 10%;
  width: 10%;
}
.projectimg {
  vertical-align: middle;
}
#question2 {
  margin-top: 10px;
}

.pLink {
  position: relative;
  color:rgb(255, 255, 255);
  text-decoration: none;
}
.pLink:hover {
  color: white;
}
.pLink::before {
  content: "";
  position: absolute;
  display: block;
  width: 100%;
  height: 1px;
  bottom: 0;
  left: 0;
  background-color: white;
  transform: scaleX(0);
  transition: transform 0.3s ease;
}
.pLink:hover::before {
  transform: scaleX(1);
}
.link {
  position: relative;
  color:rgb(255, 255, 255);
  text-decoration: none;
}
.link:hover {
  color: white;
}
.link::before {
  content: "";
  position: absolute;
  display: block;
  width: 100%;
  height: 1px;
  bottom: 0;
  left: 0;
  background-color: white;
  transform: scaleX(0);
  transform-origin: top left;
  transition: transform 0.3s ease;
}
.link:hover::before {
  transform: scaleX(1);
}
#submithob {
  background-color: #1A936F;
  color: black;
}
.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: end;
}
#logo {
  height: 3%;
  width: 3%;
}

